[tool.poetry]
name = "nzshm-hazlab"
version = "0.1.0"
description = "A library for exploring and generating plots of seismic hazard models"
authors = ["chrisdicaprio <christopher.dicaprio@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
packages = [{include = "nzshm_hazlab"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
matplotlib = "^3.6.2"
pyqt5 = {version = "^5.15.7", optional = true}
markdown = "^3.4.1"
toml = "^0.10.2"
xmltodict = "^0.13.0"
solvis = "^1.0.0"
nzshm-common = "^0.8.4"
toshi-hazard-store = {git = "https://github.com/GNS-Science/toshi-hazard-store.git", rev = "pre-release-v1.0"}
pygmt = "^0.15.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.15.0"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
tox = "^4.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
